--- a/standalones.html
+++ b/standalones.html
@@ -6,12 +6,12 @@
     <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>Google Solitaire</title>
     
-    <script type="text/javascript" src="solitaire_compiled.2.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/solitaire_compiled.2.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="default.css">
-    <link rel="stylesheet" type="text/css" href="mobile_portrait.css"
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/default.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/mobile_portrait.css"
           media="only screen and (orientation: portrait)">
-    <link rel="stylesheet" type="text/css" href="ipad.css"
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/ipad.css"
                                            media="only screen and (min-width : 768px) and (max-width : 1024px)">
   </head>
   <body>
@@ -94,7 +94,7 @@
       <div id="solitaire-final-dialog">
         <div id="solitaire-final-dialog-container" class="place_center">
           <div id="ribbon-cards"></div>
-          <img id="ribbon-img" src="ribbon_no_text.png"/>
+          <img id="ribbon-img" src="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/ribbon_no_text.png"/>
           <div id="ribbon-body" class="blue-box">
           <div id="ribbon-text" class="place_center">
             <div class="ribbon-char">YOU</div>
