--- a/standalones.html
+++ b/standalones.html
@@ -95,6 +95,7 @@
         <div id="solitaire-final-dialog-container" class="place_center">
           <div id="ribbon-cards"></div>
           <img id="ribbon-img" src="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/ribbon_no_text.png"/>
+          <img id="card-img" src="https://cdn.jsdelivr.net/gh/Creatorofplus/solitaire@main/solitaire-main/card-sprite.png"/>
           <div id="ribbon-body" class="blue-box">
           <div id="ribbon-text" class="place_center">
             <div class="ribbon-char">YOU</div>
