--- a/standalones.html
+++ b/standalones.html
@@ -107,7 +107,7 @@
       <!-- END solitaire HTML CODE -->
 
       <script>
-        // Appends ?hl=zh_CN or #hl=zh_CN to the URL to change hl flag.
+        // Appeds ?hl=zh_CN or #hl=zh_CN to the URL to change hl flag.
         window.google.doodle.hl = 'en';
         gws.lrfactory.solitaire.start();
       </script>
