--- a/sigma.html
+++ b/sigma.html
@@ -141,7 +141,7 @@
     <script id="unity-loader" src="https://cdn.jsdelivr.net/gh/Creatorofplus/WORKING@main/11l/js/UnityLoader.js"></script>
     <!--<script src="Build/UnityLoader.js"></script>-->
     <script>
-      var gameJsonUrl = "https://11projectplus.s3.us-east-2.amazonaws.com/WebGL.json"; //%gameJsonUrl
+      var gameJsonUrl = "https://cdn.jsdelivr.net/gh/ProjectPlusGames/solitaire@main/WebGL.json"; //%gameJsonUrl
       var hostname = window.location.hostname;
       if (hostname.indexOf("dev1v1") >= 0 || hostname.indexOf("dev.1v1") >= 0 || hostname.indexOf("test1v1") >= 0 || hostname.indexOf("test.1v1") >= 0) {
         let urlParams = new URLSearchParams(window.location.search);
